@@ -1,5 +1,12 @@
 2004-09-11  Michael Koch  <konqueror@gmx.de>
 
+	* javax/swing/JSpinner.java
+	(setModel): New method.
+	* javax/swing/SpringLayout.java
+	(Constraints): May not be final.
+
+2004-09-11  Michael Koch  <konqueror@gmx.de>
+
 	* gnu/java/awt/peer/gtk/GtkClipboard.java,
 	java/awt/datatransfer/Clipboard.java,
 	java/awt/datatransfer/ClipboardOwner.java:
